# NeuralFS

./: .gitignore  .kilocodemodes  .roomodes  FSIF_4_0_Plan.md  NeuralFS analysis report.md  NeuralFS_analysis_report.md  README.md  converter_gui_base.py  developer_setup.md  freespace creative writing agent prompt.txt  fsif+fcif converting agent prompt.txt  fsif+fcif writing agent prompt.txt  opencode.json  pyproject.toml  sexp_defs_bug_report.md
Documentation/: index.md
FCIF_to_FC2_Converter/: README.md  fcif_converter_gui.py  fcif_to_fc2.py
FSIF_to_FS2_Converter/: README.md  __init__.py  briefing_icon_types.py  data_models.py  fs2_writer.py  fs_data.py  fs_flags_constants.py  fsif_converter_gui.py  fsif_to_fs2.py  mission_loader.py  secondary_bank_capacities.md  secondary_weapon_sizes.md  setup.py  ship_tables.txt  ship_tables_sample.txt  test_waypoint_collisions.py  text_styling_utils.py  tts_elevenlabs.py  tts_google.py  tts_inworld.py  tts_provider_base.py  utils.py  validate_sexp_scalar_styles.py  validator.py  voice_manager.py  weapon_tables.txt  weapon_tables_sample.txt  weapons_compatibility_data.py
Fiction_Viewer_Validator/: README.md  fiction_viewer_validator.py
Freespace Bibles/: FS_Universe_Bible_Condensed.txt  Freespace Universe Bible.txt
Old docs/: authoring-guide-OLD.md  specification-OLD.md
The_Longest_Night_Campaign/: Campaign_Bible.txt
VS Code prompts/: freespace creative writing agent.txt  fsif+fcif converting agent.txt  fsif+fcif writing agent.txt  single fsif mission editing agent.txt
Vega_Requiem/: Campaign_Bible.txt  Vega_Requiem.fc2  (+2 more)
(+286 files in other folders)
